[build-system]
requires = [
    "flit",
]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "lattices"
author = "Ryan G. James"
author-email = "ryangregoryjames@gmail.com"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering :: Physics',
]
description-file = "README2.rst"
home-page = "https://github.com/dit/lattices"
keywords = "lattice, partial order, graph, network"
requires = [
    'networkx',
]
requires-python = "~=3.3"

[tool.flit.metadata.requires-extra]
plotting = [
    "nxpd",  # "nxpd @ git+https://git@github.com/chebee7i/nxpd.git@refs/pull/15/merge#egg=nxpd",
]
test = [
    "codecov",
    "pytest >= 4.4.0",
    "pytest-cov",
]
doc = [
    "ipython[nbconvert]",
    "sphinx",
]

dev = [
    "codecov",
    "ipython[nbconvert]",
    "nxpd",
    "pytest >= 4.4.0",
    "pytest-cov",
    "pytest-xdist",
    "sphinx",
]
